Bug 734406.  Fix printing and print preview for <canvas> by checking for script-enabled on the original document, not on the printing document.  r=tnikkel